Bug 119947 - UI: FontWork Menu All Black on Windows OpenGL
Summary: UI: FontWork Menu All Black on Windows OpenGL
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2018-09-18 04:14 UTC by Luke
Modified: 2019-03-19 12:47 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot of the Problem (196.55 KB, image/png)
2018-09-18 04:15 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2018-09-18 04:14:41 UTC
With OpenGL enabled in Windows, the FontWork Menu is all black.

Steps to reproduce:
1. Ensure OpenGL is enabled
2. In Writer or Impress, Insert -> Fontwork
3. Click on the FontWork toolbar -> "FontWork Character Spacing"

Actual Results:
The menu is black text on a black background.

Expected Results:
Black text on a white background

I could reproduce this with both my Nvidia gtx 650 and Intel HD 5500. 

Version: 6.1.0.0.alpha0+ (x64)
Build ID: 9c8a6a4396ebbe8ecb15591cc291c388c82c8ed6
2018-04-13 15:31:44 +0100
good

Version: 6.1.0.0.alpha1+ (x64)
Build ID: 84f30b34bf63dba8d5b478edac684bee5a841100
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
2018-05-20 15:43:06 +0200
bad

Note: when bisecting this sometimes the menu will show up properly. You might want to double check your "good" results.
Comment 1 Luke 2018-09-18 04:15:57 UTC
Created attachment 144969 [details]
Screenshot of the Problem
Comment 2 Xisco Faulí 2018-09-18 10:59:29 UTC Comment hidden (obsolete)
Comment 3 Aron Budea 2018-09-18 11:23:21 UTC
Confirmed with a 6.2 daily build from 09-07 / Windows 7 with OpenGL enabled.
Comment 4 Aron Budea 2018-09-18 19:27:35 UTC
Bibisected to the following commit using repo bibisect-win32-6.1. Adding Cc: to Miklos Vajna, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b160db926b574b7e9d6696d49dbbce8dd289aade
author		Miklos Vajna <vmiklos@collabora.co.uk>	2018-05-14 09:34:52 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-05-14 10:34:25 +0200

tdf#96947 vcl opengl win: fix background of menu items w/ check/radio marks
Comment 5 Aron Budea 2019-03-06 19:02:52 UTC Comment hidden (obsolete)
Comment 6 Luke 2019-03-06 19:46:24 UTC Comment hidden (obsolete)
Comment 7 Miklos Vajna 2019-03-07 14:51:08 UTC
Luke: did you use a dbgutil or a product build?

I can still reproduce this problem with daily build (Win-x86@39/2019-03-06_01.15.45), but not with a dbgutil local build. So I guess this was not fixed.
Comment 8 V Stuart Foote 2019-03-07 15:10:40 UTC
I see the black in 32-bit builds of master/6.3.0alpha0+ (TB39), but not in 64-bit builds (TB42). And on the 32-bit builds, moving the mouse (so with mouseover events) the entries menu items show through then get hidden again.
Comment 9 Miklos Vajna 2019-03-07 16:19:52 UTC
OK, finally I have a local --enable-symbols build where this happens reliably, even on master. I'll take a look.
Comment 10 Commit Notification 2019-03-07 20:46:47 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/5f2b67e7c1aa4ea7bb66292207ed8c9b20a6f78f%5E%21

tdf#119947 vcl opengl win: fix fontwork popup menu

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Luke 2019-03-08 01:40:46 UTC
Yes, my last comment was wrong, but now it looks good.

Verified FIXED in Version: 6.3.0.0.alpha0+ (x64)
Build ID: 5f2b67e7c1aa4ea7bb66292207ed8c9b20a6f78f
Comment 12 Luke 2019-03-09 15:56:06 UTC
Miklos,
I've been using this for a couple of days without issue. Do you feel this fix is safe enough to back port to 6.2?
Comment 13 Aron Budea 2019-03-09 16:13:00 UTC
It's on gerrit, as I can see: https://gerrit.libreoffice.org/#/c/68904/
Comment 14 Commit Notification 2019-03-19 12:47:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/17e17feb6ad180432e656364a4b48acb83cdd33c%5E%21

tdf#119947 vcl opengl win: fix fontwork popup menu

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.